--- a/iOS8Sampler/Samples/AltimeterViewController.xib
+++ b/iOS8Sampler/Samples/AltimeterViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AltimeterViewController">
@@ -56,6 +56,11 @@
                     <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                     <color key="textColor" red="0.20000000000000001" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="qIf-wK-x6C"/>
+                        </mask>
+                    </variation>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZq-YY-9a5">
                     <rect key="frame" x="28" y="320" width="358" height="20"/>
@@ -66,6 +71,11 @@
                     <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                     <color key="textColor" red="0.20000000000000001" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="xAJ-1Q-VKf"/>
+                        </mask>
+                    </variation>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsX-9E-EGg">
                     <rect key="frame" x="28" y="120" width="358" height="20"/>
@@ -76,6 +86,11 @@
                     <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                     <color key="textColor" red="0.20000000000000001" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Vfb-sz-4XT"/>
+                        </mask>
+                    </variation>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -83,6 +98,7 @@
                 <constraint firstItem="hEw-cL-5Uc" firstAttribute="top" secondItem="Reh-xl-X3g" secondAttribute="bottom" constant="80" id="1Yc-BX-dk5"/>
                 <constraint firstItem="Reh-xl-X3g" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="28" id="7ZE-q7-11R"/>
                 <constraint firstItem="LCx-ck-Fae" firstAttribute="top" secondItem="hsX-9E-EGg" secondAttribute="bottom" constant="80" id="Awa-eK-i7H"/>
+                <constraint firstItem="JZq-YY-9a5" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="28" id="ChR-Vo-SlC"/>
                 <constraint firstItem="Reh-xl-X3g" firstAttribute="top" secondItem="Yf7-sC-4Qv" secondAttribute="bottom" constant="80" id="GKq-b6-uxn"/>
                 <constraint firstItem="JZq-YY-9a5" firstAttribute="top" secondItem="LCx-ck-Fae" secondAttribute="bottom" constant="80" id="NjL-I7-dpV"/>
                 <constraint firstItem="Yf7-sC-4Qv" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="90" id="R4T-4S-QWC"/>
@@ -91,6 +107,8 @@
                 <constraint firstAttribute="trailing" secondItem="JZq-YY-9a5" secondAttribute="trailing" constant="28" id="Uxp-GA-RE1"/>
                 <constraint firstItem="hEw-cL-5Uc" firstAttribute="top" secondItem="Reh-xl-X3g" secondAttribute="bottom" constant="80" id="eDJ-fn-58g"/>
                 <constraint firstItem="Yf7-sC-4Qv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="28" id="fGU-Tn-iIr"/>
+                <constraint firstItem="hsX-9E-EGg" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="28" id="gC5-3v-v4J"/>
+                <constraint firstItem="LCx-ck-Fae" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="28" id="hMG-VQ-RuZ"/>
                 <constraint firstItem="hsX-9E-EGg" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="120" id="i95-Fg-Ej4"/>
                 <constraint firstAttribute="trailing" secondItem="LCx-ck-Fae" secondAttribute="trailing" constant="28" id="j9e-cn-6vb"/>
                 <constraint firstItem="hEw-cL-5Uc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="28" id="jtr-jf-GtN"/>
