--- a/iOS8Sampler/Base.lproj/Main.storyboard
+++ b/iOS8Sampler/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rS3-R9-Ivy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rS3-R9-Ivy">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="AvenirNext.ttc">
@@ -42,25 +42,25 @@
                                     <rect key="frame" x="0.0" y="0.0" width="567" height="69.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5s-6a-m1S">
-                                            <rect key="frame" x="15" y="38" width="552" height="15.5"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" verticalHuggingPriority="249" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5s-6a-m1S">
+                                            <rect key="frame" x="15" y="36" width="552" height="23.5"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="11"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QmC-6l-5XE">
-                                            <rect key="frame" x="15" y="16" width="32" height="22"/>
+                                            <rect key="frame" x="15" y="10" width="32" height="22"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
                                             <color key="textColor" red="0.20000000000000001" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="QmC-6l-5XE" firstAttribute="top" secondItem="d3P-M7-ByW" secondAttribute="top" constant="16" id="2NJ-Vj-6By"/>
-                                        <constraint firstItem="A5s-6a-m1S" firstAttribute="top" secondItem="QmC-6l-5XE" secondAttribute="bottom" id="HsV-pS-Rx9"/>
+                                        <constraint firstItem="QmC-6l-5XE" firstAttribute="top" secondItem="d3P-M7-ByW" secondAttribute="top" constant="10" id="2NJ-Vj-6By"/>
+                                        <constraint firstItem="A5s-6a-m1S" firstAttribute="top" secondItem="QmC-6l-5XE" secondAttribute="bottom" constant="4" id="HsV-pS-Rx9"/>
                                         <constraint firstAttribute="trailing" secondItem="A5s-6a-m1S" secondAttribute="trailing" id="Msi-sx-oyJ"/>
                                         <constraint firstItem="A5s-6a-m1S" firstAttribute="leading" secondItem="QmC-6l-5XE" secondAttribute="leading" id="StH-26-ed2"/>
-                                        <constraint firstAttribute="bottom" secondItem="A5s-6a-m1S" secondAttribute="bottom" constant="16" id="h4k-di-Nny"/>
+                                        <constraint firstAttribute="bottom" secondItem="A5s-6a-m1S" secondAttribute="bottom" constant="10" id="h4k-di-Nny"/>
                                         <constraint firstItem="QmC-6l-5XE" firstAttribute="leading" secondItem="d3P-M7-ByW" secondAttribute="leading" constant="15" id="ilp-Bq-prT"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -77,7 +77,7 @@
                             <outlet property="delegate" destination="pGg-6v-bdr" id="Y6K-Cp-Qkv"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="iOS8 Sampler" id="tQt-TN-PWz"/>
+                    <navigationItem key="navigationItem" title="iOS 8 Sampler" id="tQt-TN-PWz"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Cn-md-YlS" sceneMemberID="firstResponder"/>
             </objects>
